[gd_scene load_steps=4 format=3 uid="uid://dpwgl3xn4u47j"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_main_menu"]

[sub_resource type="Animation" id="Animation_title_glow"]
resource_name = "title_glow"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_main"]
_data = {
"title_glow": SubResource("Animation_title_glow")
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.0509804, 0.121569, 1)

[node name="TitleContainer" type="VBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 100.0
offset_bottom = 300.0
grow_horizontal = 2

[node name="GameTitle" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0.25098, 1)
theme_override_font_sizes/font_size = 48
text = "KIKU'S DESPAIR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.941176, 0.941176, 0.941176, 1)
theme_override_font_sizes/font_size = 32
text = "Melody of the Dead"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleSpacer" type="Control" parent="TitleContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="TitleAnimation" type="AnimationPlayer" parent="TitleContainer"]
root_node = NodePath("../GameTitle")
libraries = {
"": SubResource("AnimationLibrary_main")
}

[node name="MenuButtons" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="NewGameButton" type="Button" parent="MenuButtons"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "NEW GAME"

[node name="ContinueButton" type="Button" parent="MenuButtons"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CONTINUE"

[node name="SettingsButton" type="Button" parent="MenuButtons"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SETTINGS"

[node name="CreditsButton" type="Button" parent="MenuButtons"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CREDITS"

[node name="QuitButton" type="Button" parent="MenuButtons"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "QUIT"

[node name="VersionLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "v1.0.0"
horizontal_alignment = 2
vertical_alignment = 2
